fixing card overflow ui issue

--- a/UI/Web/src/_card-item-common.scss
+++ b/UI/Web/src/_card-item-common.scss
@@ -169,7 +169,7 @@ $image-width: 160px;
       margin: 0;
       padding: 10px 0;
       text-align: center;
-      max-width: 120px;
+      max-width: 110px;
     
       a {
         overflow: hidden;
